# aura

./: .cfnlintrc  .dockerignore  .flake8  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  release-please-config.json  requirements-agents.txt  requirements-api.txt  requirements-test-extras.txt  requirements.txt  robots.txt
.aura/: config.example.yml  config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  test_failure.yml
.github/codeql/: codeql-config.yml
.github/workflows/: aura-ci-autofix.yml  aura-security-review.yml  aura-webhook.yml  benchmarks.yml  buildspec-validation.yml  code-quality.yml  codeql.yml  dependency-risk-audit.yml  nightly-iam-validation.yml  nightly-live-llm.yml  release-please.yml
agent-config/: GUARDRAILS.md
agent-config/agents/: AGENTS_CONSOLIDATED.md  adr-pipeline-agents.md  code-quality-reviewer.md  documentation-accuracy-reviewer.md  performance-reviewer.md  runbook-agent.md  security-code-reviewer.md  test-coverage-reviewer.md
agent-config/design-workflows/: app-ui-blueprint.md  design-principles.md  design-review-workflow.md
agent-config/schemas/: cicd-schema.md  cognitive-memory-schema.md
archive/architecture-decisions/: ADR-082-pydanticai-integration-analysis.py  ADR-STATUS-LIFECYCLE.md  ARCHITECTURE_DECISION_VPC_CONNECTIVITY.md  CHAT_ASSISTANT_ARCHITECTURE.md
archive/changelogs/: CHANGELOG-unreleased-2025-12-05-to-2025-12-14.md  CHANGELOG-v1.0-v1.2.md
archive/deployments/: DEPLOYMENT_GUIDE_2025-11-11.md  PHASE1_DEPLOYMENT_SUMMARY.md  TEST_PLAN.md
archive/deprecated/: PHASE2_IMPLEMENTATION_GUIDE.md  PLATFORM_ENDUSER_GUIDE_CKGE_2025-12-13.md  cloudtrail.yaml
archive/documentation-audits/: CLAUDE_MD_ARCHIVED_SECTIONS_2025-12-13.md  DOCUMENTATION_REVIEW_FINDINGS_2025-11-27.md
archive/implementation-snapshots/: IMPLEMENTATION_AGENTIC_SEARCH.md
archive/incidents/: phase2-neptune-opensearch-failures-2025-11-24.md
archive/legacy/: CKGE_V2_DEPLOYMENT_PLAN.md  DOCUMENTATION_STRUCTURE_CKGE_2025.md  EKS_COST_ANALYSIS.md  MODULAR_CICD_MIGRATION_GUIDE.md
archive/mockups/: tahoe-mockup-v2.html  tahoe-mockup.html
archive/scripts/: README.md  deploy-cicd-pipeline.sh  deploy-data-codebuild.sh  deploy-foundation-codebuild.sh  deploy-phase2-infrastructure.sh  setup_repo.sh  trigger-data-build.sh  trigger-foundation-build.sh
archive/security-audits/: CKGE_SECURITY_ANALYSIS.md  SECURITY_CICD_ANALYSIS.md  adr-025-parameterization-audit-2025-12-06.md  aws-s3-access-log-schema-change-assessment-2026-01-19.md  govcloud-security-remediation-2025-11-22.md
archive/sessions/: SESSION_SUMMARY_2025-11-18_agentic_search.md  (+1 more)
dataiku-connector/: plugin.json
deploy/: AWS_SETUP_GUIDE.md  INFRASTRUCTURE_SUMMARY.md  MODULAR_DEPLOYMENT.md  QUICK_START.md  README.md  buildspec.yml  deploy.sh  validate_aws_setup.py
docs/: COST_GATE_DEFERRED.md  DEFERRED_WORK_REGISTRY.md  DOCUMENTATION_INDEX.md  PROJECT_STATUS.md  SYSTEM_ARCHITECTURE.md  agent-architecture-multi-agent-orchestration.html  agent-guardrail-capabilities.html  agentic-capabilities.html  architecture-decision-records.html  cicd-pipeline-deployment-automation.html  comprehensive-testing-overview.html  deterministic-verification-envelope.html  documentation-generation-capabilities.html  hitl-capabilities.html  hybrid-graphrag-architecture.html  infrastructure-deployment-architecture.html  memory-architecture-cognitive-systems.html  security-architecture-compliance.html  technical_spec.md  tools-vs-skills-architecture.html
fivetran-connector/: connector_spec.json  pyproject.toml
fivetran-connector/src/: __init__.py  connector.py
fivetran-connector/tests/: __init__.py  test_connector.py
frontend/: .env.example  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
jupyter-extension/: package.json  tsconfig.json
pycharm-plugin/: .gitignore  build.gradle.kts  gradle.properties
scripts/: CLAUDE.md  adr_092_static_action_scan.py  adr_093_taint_query_static_scan.py  adr_093_taint_schema_static_scan.py  aura_security_cli.py  aws_cost_calculator.py  aws_costs_production.csv  cfn-lint-wrapper.sh  dev_killswitch.py  disable_neptune_taint_resolver.py  get-dev-token.sh  killswitch_lock.py  lint-markdown.sh  lint_edge_labels.py  migrate_entity_ids_adr090.py  qa_killswitch.py  revoke_summary_signatures.py  roi_calculator.py  rotate-dev-passwords.sh  run-tests-in-container.sh  symbol_resolver_worker.py  test_adr_pipeline_demo.py  test_branch_protection_realworld.py  validate_iam_actions.py  verify_counts.py  verify_dockerfile_build_args.py
src/: exceptions.py
tests/: CLAUDE.md  _lint_sys_modules.py  conftest.py  test_a2a_agent_registry.py  test_a2a_gateway.py  test_a2a_protocol.py  test_a2as_security_service.py  test_abstractions.py  test_adaptive_intelligence_agent.py  test_adr037_services.py  test_adr_pipeline.py  test_adversarial_input_service.py  test_agent_error_handling.py  test_agent_evaluation_service.py  test_agent_messaging.py  test_agent_orchestration_edge_cases.py  test_agent_orchestrator.py  test_agent_queue_service.py  test_agent_registry_endpoints.py  test_agent_runtime_service.py  test_agent_timeout_edge_cases.py  test_agentic_search_integration.py  test_airgap_services.py  test_alignment_analytics.py  test_alignment_audit_logger.py  test_alignment_metrics_service.py  test_alignment_phase2.py  test_alignment_phase3.py  test_alignment_reversibility.py  test_alignment_rollback_service.py  test_alignment_services.py  test_alignment_sycophancy_guard.py  test_alignment_trust_autonomy.py  test_alignment_trust_calculator.py  test_anomaly_detection_service.py  test_anomaly_e2e_synthetic.py  test_anomaly_persistence_service.py  test_anomaly_triggers.py  test_api_auth.py  test_api_endpoints.py  (+302 more)
vscode-extension/: package.json
(+2835 files in other folders)
