[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-fivetran-connector"
version = "2.0.0"
description = "Fivetran connector for Aura Code Intelligence Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aenea Labs", email = "support@aenealabs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fivetran-connector-sdk>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]

[project.scripts]
aura-fivetran = "src.connector:main"

[project.urls]
Homepage = "https://github.com/aenealabs/aura"
Documentation = "https://docs.aenealabs.com/integrations/fivetran"
Repository = "https://github.com/aenealabs/aura"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
